# sentinel-csrf

./: .gitignore  GEMINI.md  LINKEDIN_POST_1.md  PRD.md  README.md  cookies.txt  demo.sh  poc.html  pyproject.toml  request.txt  requirements.txt
Archive/: csrf_detection_tool_product_requirements_document.md
examples/: burp-export.xml  cookies.txt  request.txt
results/: findings.json  report.md
sentinel_csrf/analysis/: tokens.py
tests/: __init__.py
