[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-csrf"
version = "1.0.0"
description = "A verification-driven CSRF exploitation assistant for VAPT teams"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sentinel-CSRF Team"}
]
keywords = ["csrf", "security", "vapt", "penetration-testing", "bug-bounty"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
sentinel-csrf = "sentinel_csrf.cli:main"

[project.urls]
Homepage = "https://github.com/sentinel-csrf/sentinel-csrf"
Documentation = "https://github.com/sentinel-csrf/sentinel-csrf#readme"
Repository = "https://github.com/sentinel-csrf/sentinel-csrf"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinel_csrf*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
